--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
@@ -1,6 +1,6 @@
 ﻿<header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark indigo">
-        <a class="navbar-brand" href="#">the Dev Blog</a>
+        <a class="navbar-brand" asp-page="/Index">the Dev Blog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -8,16 +8,16 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" asp-page="/Index">
                         Home
-                        <span class="sr-only">(current)</span>
+                        @*<span class="sr-only">(current)</span>*@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Game</a>
+                    <a class="nav-link" asp-page="/Status/Index">Status</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">My Bio</a>
+                    <a class="nav-link" asp-page="/Bio/Index">My Bio</a>
                 </li>
             </ul>
             <div class="collapse navbar-collapse justify-content-end">
