Create status update form.

--- a/Dev-Blog/Dev-Blog/Pages/Status/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Index.cshtml
@@ -7,4 +7,9 @@
 <head>
     <title>Status</title>
 </head>
-<h1>Game Status</h1>
+<body>
+    <h1>Game Status</h1>
+    <main>
+        <a class="nav-link" asp-page="Add">Create Update</a>
+    </main>
+</body>
