Move img upload icon into seperate partial to save room.

--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
@@ -8,10 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" asp-page="/Index">
-                        Home
-                        @*<span class="sr-only">(current)</span>*@
-                    </a>
+                    <a class="nav-link" asp-page="/Index">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" asp-page="/Status/Index">Status</a>
