--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Layout.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Dev_Blog</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/All.css" />
 </head>
 <body>
     @{ await Html.RenderPartialAsync("_Header");}
