--- a/Dev-Blog/Dev-Blog/Pages/Status/Add.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Add.cshtml
@@ -16,20 +16,34 @@
                 <div class="col-md-6 col-md-offset-3">
                     <div class="panel panel-info">
                         <div class="panel-body">
-                            <textarea placeholder="Add text here..." class="pb-cmnt-textarea"></textarea>
-                            <form class="form-inline">
+                            <form method="post" enctype="multipart/form-data" class="form-inline">
+                                <textarea placeholder="Add text here..." class="pb-cmnt-textarea"></textarea>
                                 <div class="btn-group">
                                     <button class="btn" type="button">
                                         Upload Image
                                         @{ await Html.RenderPartialAsync("_ImgUploadIcon");}
                                     </button>
                                 </div>
-                                <button class="btn btn-primary pull-right" type="button">Post</button>
+                                <input class="form-control" type="file" asp-for="@Model.Image" />
+                                <button class="btn btn-primary pull-right" type="submit">Post</button>
                             </form>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        @*<div class="row">
+                <div class="col-md-4 d-flex justify-content-center upload-form">
+                    <form method="post" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <input class="form-control" placeholder="Image Name" />
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="file" />
+                            <button type="submit" class="btn btn-primary btn-sm text-left">Upload Image</button>
+                        </div>
+                    </form>
+                </div>
+            </div>*@
     </main>
 </body>
