Add image upload icon.

--- a/Dev-Blog/Dev-Blog/wwwroot/css/Add.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/Add.css
@@ -13,3 +13,8 @@
     width: 100%;
     border: 1px solid #F2F2F2;
 }
+
+/*image upload*/
+#bootstrap-override #file[type="file"] {
+    display: none;
+}
