--- a/Dev-Blog/Dev-Blog/Pages/Status/Add.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Add.cshtml
@@ -18,13 +18,12 @@
                         <div class="panel-body">
                             <form method="post" enctype="multipart/form-data" class="form-inline">
                                 <textarea placeholder="Add text here..." class="pb-cmnt-textarea"></textarea>
-                                <div class="btn-group">
-                                    <button class="btn" type="button">
-                                        Upload Image
-                                        @{ await Html.RenderPartialAsync("_ImgUploadIcon");}
-                                    </button>
-                                </div>
-                                <input class="form-control" type="file" asp-for="@Model.Image" />
+                                <input id="file" class="form-control" asp-for="@Model.Image" type="file" accept="image/*" />
+                                <label for="file" asp-for="@Model.Image">
+                                    @{await Html.RenderPartialAsync("_ImgUploadIcon"); }
+                                    Image
+                                </label>
+                                <input class="form-control" asp-for="@Model.Name" placeholder="img title" />
                                 <button class="btn btn-primary pull-right" type="submit">Post</button>
                             </form>
                         </div>
@@ -32,18 +31,5 @@
                 </div>
             </div>
         </div>
-        @*<div class="row">
-                <div class="col-md-4 d-flex justify-content-center upload-form">
-                    <form method="post" enctype="multipart/form-data">
-                        <div class="form-group">
-                            <input class="form-control" placeholder="Image Name" />
-                        </div>
-                        <div class="form-group">
-                            <input class="form-control" type="file" />
-                            <button type="submit" class="btn btn-primary btn-sm text-left">Upload Image</button>
-                        </div>
-                    </form>
-                </div>
-            </div>*@
     </main>
 </body>
