--- a/Dev-Blog/Dev-Blog/Pages/Status/Add.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Add.cshtml
@@ -35,23 +35,5 @@
             </div>
         </div>
     </main>
-    <!--Toggle green and red x -->
-    <script type="text/javascript">
-        var check = document.getElementById("check");
-        var cross = document.getElementById("cross");
-
-        document.addEventListener("DOMContentLoaded", function () {
-            check.style.display = "none";
-        });
-
-        function greenCheck() {
-            if (check.style.display === "none") {
-                check.style.display = "block";
-                cross.style.display = "none";
-            } else {
-                check.style.display = "none";
-                cross.style.display = "block";
-            }
-        }
-    </script>
+    <script src="~/js/Add.js"></script>
 </body>
