Style post creation form.

--- a/Dev-Blog/Dev-Blog/Pages/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model IndexModel
+@model Dev_Blog.Pages.IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Index";
     Layout = "_Layout";
 }
 
