--- a/Dev-Blog/Dev-Blog/Pages/_ViewImports.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/_ViewImports.cshtml
@@ -1,3 +1,1 @@
-@using Dev_Blog
-@namespace Dev_Blog.Pages
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
