--- a/Dev-Blog/Dev-Blog/Pages/Status/Add.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Add.cshtml
@@ -6,15 +6,15 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="~/css/Add.css" />
-
+    <link rel="stylesheet" type="text/css" href="~/css/All.css" />
     <title>Status</title>
 </head>
 <body id="bootstrap-override">
-    <main>
+    <main id="main">
         <h1>Add Update</h1>
         <div class="container pb-cmnt-container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="panel-box col-md-6 col-md-offset-3">
                     <div class="panel panel-info">
                         <div class="panel-body">
                             <form method="post" enctype="multipart/form-data" class="form-inline">
