--- a/Dev-Blog/Dev-Blog/Pages/Status/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model Dev_Blog.Pages.Status.IndexModel
 @{
+    ViewData["Title"] = "Updates";
     Layout = "_Layout";
 }
 
@@ -11,5 +12,13 @@
     <h1>Game Status</h1>
     <main>
         <a class="nav-link" asp-page="Add">Create Update</a>
+        @{
+            foreach (var post in Model.Posts)
+            {
+                <h3>@post.Date.ToShortDateString()</h3>
+                <p>@post.Description</p>
+                <img src=@post.ImgURL height="300" width="225" />
+            }
+        }
     </main>
 </body>
