--- a/Dev-Blog/Dev-Blog/Pages/Status/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Index.cshtml
@@ -11,7 +11,7 @@
 <body>
     <h1>Game Status</h1>
     <main>
-        <a class="nav-link" asp-page="Add">Create Update</a>
+        <a class="nav-link" asp-page="Add">Add Post</a>
         @{
             foreach (var post in Model.Posts)
             {
