--- a/Dev-Blog/Dev-Blog/wwwroot/css/All.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/All.css
@@ -2,7 +2,7 @@
     text-align: center;
 }
 
-    #bootstrap-override main {
+/*    #bootstrap-override main {
         border: 2px solid red;
         margin: auto;
-    }
+    }*/
