Change header font and add logo icon.

--- a/Dev-Blog/Dev-Blog/Pages/Account/Register.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/Register.cshtml
@@ -5,6 +5,10 @@
 }
 
 <head>
+    <link rel="stylesheet" type="text/css" href="~/css/All.css" />
+
     <title>Register</title>
 </head>
-<h1>Register</h1>
+<body id="bootstrap-override">
+    <h1>Register</h1>
+</body>
