--- a/Dev-Blog/Dev-Blog/Pages/Account/Login.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/Login.cshtml
@@ -5,6 +5,10 @@
 }
 
 <head>
+    <link rel="stylesheet" type="text/css" href="~/css/All.css" />
+
     <title>Login</title>
 </head>
-<h1>Login</h1>
+<body id="bootstrap-override">
+    <h1>Login</h1>
+</body>
