--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
@@ -1,6 +1,7 @@
 ﻿<header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark indigo">
         <a class="navbar-brand" asp-page="/Index">the Dev Blog</a>
+        <img src="~/Imgs/Logo.png" height="115" width="100" />
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
