--- a/Dev-Blog/Dev-Blog/Pages/Status/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Index.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body id="bootstrap-override">
     <main>
-        <a class="nav-link" asp-page="Add">Add Post</a>
+        <a id="add-post" class="btn btn-primary" asp-page="Add">Add Post</a>
         <div class="container">
             @{
                 foreach (var post in Model.Posts)
