Add comment box (non functional)

--- a/Dev-Blog/Dev-Blog/Pages/Status/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Index.cshtml
@@ -28,6 +28,11 @@
                             <img class="update-img" src=@post.ImgURL />
                             <p>@post.Description</p>
                         </div>
+                        <div class="comment-box form-group">
+
+                            <textarea class="form-control" placeholder="comment..." rows="2" id="comment"></textarea>
+                            <button class="btn btn-secondary" type="submit">Comment</button>
+                        </div>
                     </div>
                 }
             }
