--- a/Dev-Blog/Dev-Blog/Pages/Account/Login.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/Login.cshtml
@@ -10,5 +10,30 @@
     <title>Login</title>
 </head>
 <body id="bootstrap-override">
-    <h1>Login</h1>
+    <form class="text-center border border-light p-5" action="#!">
+
+        <p class="h4 mb-4">Sign in</p>
+
+        <!-- Email -->
+        <input type="text" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="UserName">
+
+        <!-- Password -->
+        <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
+
+        <div class="d-flex justify-content-around">
+            <div>
+                <!-- Forgot password -->
+                <a href="">Forgot password?</a>
+            </div>
+        </div>
+
+        <!-- Sign in button -->
+        <button class="btn btn-info btn-block my-4" type="submit">Sign in</button>
+
+        <!-- Register -->
+        <p>
+            Not a member?
+            <a class="nav-link" asp-page="Register">Sign Up</a>
+        </p>
+    </form>
 </body>
