--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
@@ -1,4 +1,7 @@
-﻿<header>
+﻿@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<Dev_Blog.Models.User> SignInManager
+
+<header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark indigo">
         <a class="navbar-brand" asp-page="/Index">the Dev Blog</a>
         <img src="~/Imgs/Logo.png" height="115" width="100" />
@@ -20,12 +23,29 @@
             </ul>
             <div class="collapse navbar-collapse justify-content-end">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" asp-page="/Account/Login">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-page="/Account/Register">Sign Up</a>
-                    </li>
+                    @{
+                        if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item" id="welcome-user">
+                                <a class="nav-link disabled">Welcome @User.Claims.First(x => x.Type == "UserName").Value </a>
+                            </li>
+                            <li class="nav-item">
+                                <form asp-page="/Account/Logout" method="post">
+                                    <button id="logout-button" class="nav-link" type="submit">Logout</button>
+                                </form>
+                            </li>
+                        }
+
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-page="/Account/Login">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-page="/Account/Register">Sign Up</a>
+                            </li>
+                        }
+                    }
                 </ul>
             </div>
         </div>
