--- a/Dev-Blog/Dev-Blog/Pages/Account/Login.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/Login.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model Dev_Blog.Pages.Account.LoginModel
 @{
+    ViewData["Title"] = "Login";
     Layout = "_Layout";
 }
 
@@ -10,15 +11,17 @@
     <title>Login</title>
 </head>
 <body id="bootstrap-override">
-    <form class="text-center border border-light p-5" action="#!">
+    <form class="text-center border border-light p-5" method="post">
 
         <p class="h4 mb-4">Sign in</p>
 
+        <div asp-validation-summary="All" class="error-message"></div>
+
         <!-- Email -->
-        <input type="text" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="UserName">
+        <input type="text" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="UserName" asp-for="@Model.Input.UserName">
 
         <!-- Password -->
-        <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
+        <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password" asp-for="@Model.Input.Password">
 
         <div class="d-flex justify-content-around">
             <div>
