--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
@@ -39,11 +39,16 @@
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link" asp-page="/Account/Login">Login</a>
+                                <a class="nav-link">
+                                    @{ await Html.RenderPartialAsync("_Login");}
+                                </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-page="/Account/Register">Sign Up</a>
-                            </li>
+                            @*<li class="nav-item">
+                                    <a class="nav-link" asp-page="/Account/Login">Login</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-page="/Account/Register">Sign Up</a>
+                                </li>*@
                         }
                     }
                 </ul>
