--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Login.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Login.cshtml
@@ -1,15 +1,22 @@
-﻿@using Microsoft.AspNetCore.Identity;
+﻿@model Dev_Blog.Models.ViewModels.LoginVM
+@using Microsoft.AspNetCore.Identity;
 @inject SignInManager<Dev_Blog.Models.User> SignInManager
-<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Login</button>
+<a data-toggle="modal" data-target="#myModal" class="nav-link">Login</a>
 <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
+                <h4 class="modal-title">Login</h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
             </div>
             <div class="modal-body">
-                <p>Some text in the modal.</p>
+                <form class="text-center border border-light p-5" method="post">
+                    <h5>UserName</h5>
+                    <input type="text" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="UserName" asp-for="@Model.UserName">
+                    <h5>Password</h5>
+                    <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password" asp-for="@Model.Password">
+                    <button class="btn btn-info btn-block my-4" type="submit" asp-page-handler="Login">Sign in</button>
+                </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
