--- a/Dev-Blog/Dev-Blog/Pages/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@page
-@model Dev_Blog.Models.ViewModels.LoginVM
-@*@model Dev_Blog.Pages.IndexModel*@
+@model Dev_Blog.Pages.IndexModel
 @{
     ViewData["Title"] = "Index";
     Layout = "_Layout";
@@ -21,13 +20,13 @@
                 <div class="card-header">
                     <span>
                         Update
-                        <strong>@Model.LatestPost.UpdateNum</strong>
+                        <strong>@Model.Post.UpdateNum</strong>
                     </span>
-                    <strong class="float-right">@Model.LatestPost.Date.ToShortDateString()</strong>
+                    <strong class="float-right">@Model.Post.Date.ToShortDateString()</strong>
 
                     <div class="card-body">
-                        <img id="update-img" src=@Model.LatestPost.ImgURL />
-                        <p>@Model.LatestPost.Description</p>
+                        <img id="update-img" src=@Model.Post.ImgURL />
+                        <p>@Model.Post.Description</p>
                     </div>
                 </div>
             </div>
