--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity;
 @inject SignInManager<Dev_Blog.Models.User> SignInManager
-
+@model Dev_Blog.Models.Base.BasePage
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark indigo">
         <a class="navbar-brand" asp-page="/Index">the Dev Blog</a>
@@ -39,7 +39,7 @@
                         else
                         {
                             <li class="nav-item">
-                                @{ await Html.RenderPartialAsync("_Login");}
+                                @{ await Html.RenderPartialAsync("_Login", Model.LoginModelTest);}
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" asp-page="/Account/Register">Sign Up</a>
