--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Register.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Register.cshtml
@@ -1,21 +1,24 @@
 ﻿@model Dev_Blog.Models.ViewModels.AccountVM
 @using Microsoft.AspNetCore.Identity;
 @inject SignInManager<Dev_Blog.Models.User> SignInManager
-<a data-toggle="modal" data-target="#loginModal" class="nav-link">Login</a>
-<div class="modal fade" id="loginModal" role="dialog">
+<a data-toggle="modal" data-target="#registerModal" class="nav-link">Register</a>
+<div class="modal fade" id="registerModal" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Login</h4>
+                <h4 class="modal-title">Sign Up</h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
                 <form class="text-center border border-light p-5" method="post">
                     <h5>UserName</h5>
                     <input type="text" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="UserName" asp-for="@Model.UserName">
+                    <h5>Email</h5>
+                    <input type="email" class="form-control mb-4" placeholder="Email" asp-for="@Model.Email" />
                     <h5>Password</h5>
                     <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password" asp-for="@Model.Password">
-                    <button class="btn btn-info btn-block my-4" type="submit" asp-page-handler="Login">Sign in</button>
+                    <input type="password" class="form-control mb-4" placeholder="Confirm Password" asp-for="@Model.ConfirmPassword" />
+                    <button class="btn btn-info btn-block my-4" type="submit" asp-page-handler="Register">Sign Up</button>
                 </form>
             </div>
             <div class="modal-footer">
