Rename all index files except home page.

--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
@@ -15,10 +15,10 @@
                     <a class="nav-link" asp-page="/Index">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-page="/Status/Index">Status</a>
+                    <a class="nav-link" asp-page="/Status/Posts">Status</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-page="/Bio/Index">My Bio</a>
+                    <a class="nav-link" asp-page="/Bio/Bio">My Bio</a>
                 </li>
             </ul>
             <div class="collapse navbar-collapse justify-content-end float-right">
