--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Register.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Dev_Blog.Models.ViewModels.AccountVM
 @using Microsoft.AspNetCore.Identity;
 @inject SignInManager<Dev_Blog.Models.User> SignInManager
-<a data-toggle="modal" data-target="#registerModal" class="nav-link">Register</a>
+<a data-toggle="modal" data-target="#registerModal" class="nav-link">Sign Up</a>
 <div class="modal fade" id="registerModal" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
