Add summary comments and more.

--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -22,7 +22,7 @@
                 {
                     if (User.Identity.Name == Model.AdminUser)
                     {
-                <a id="add-post" class="btn btn-primary" asp-page="Add">Add Post</a>
+                        <a id="add-post" class="btn btn-primary" asp-page="Add">Add Post</a>
                     }
                 }
                 if (Model.Posts != null)
@@ -30,25 +30,26 @@
 
                     foreach (var post in Model.Posts)
                     {
-                <div class="card">
-                    <div class="card-header">
-                        <span>
-                            Update
-                            <strong>@post.UpdateNum</strong>
-                        </span>
-                        <strong class="float-right">@post.Date.ToShortDateString()</strong>
-                    </div>
-                    <div class="card-body">
-                        <img class="update-img" src=@post.ImgURL />
-                        <p>@post.Description</p>
-                    </div>
-                    <form method="post">
-                        <div class="comment-box form-group">
-                            <textarea asp-for="@Model.Content" class="form-control" placeholder="comment..." rows="2" id="comment"></textarea>
-                            <button class="btn btn-secondary" type="submit" asp-page-handler="Comment">Comment</button>
+                        <div class="card">
+                            <div class="card-header">
+                                <span>
+                                    Update
+                                    <strong>@post.UpdateNum</strong>
+                                </span>
+                                <strong class="float-right">@post.Date.ToShortDateString()</strong>
+                            </div>
+                            <div class="card-body">
+                                <img class="update-img" src=@post.ImgURL />
+                                <p>@post.Description</p>
+                            </div>
+                            <form method="post">
+                                <div class="comment-box form-group">
+                                    <textarea asp-for=@Model.Content class="form-control" placeholder="comment..." rows="2" id="comment"></textarea>
+                                    <input hidden asp-for="@post.Id" />
+                                    <button class="btn btn-secondary" type="submit" asp-page-handler="Comment">Comment</button>
+                                </div>
+                            </form>
                         </div>
-                    </form>
-                </div>
                     }
                 }
             }
