--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -42,13 +42,24 @@
                                 <img class="update-img" src=@post.ImgURL />
                                 <p>@post.Description</p>
                             </div>
-                            <form method="post">
-                                <div class="comment-box form-group">
-                                    <textarea asp-for=@Model.Content class="form-control" placeholder="comment..." rows="2" id="comment"></textarea>
+
+                            @if (post.Comments != null)
+                            {
+                                foreach (var item in post.Comments)
+                                {
+                                    <div class="posted-comments comment-box">
+                                        <p>@item.Content</p>
+                                    </div>
+                                }
+                            }
+
+                            <div class="comment-box form-group">
+                                <form method="post">
+                                    <textarea asp-for=@Model.Comment class="form-control" placeholder="comment..." rows="2" id="comment"></textarea>
                                     <input hidden asp-for="@post.Id" />
                                     <button class="btn btn-secondary" type="submit" asp-page-handler="Comment">Comment</button>
-                                </div>
-                            </form>
+                                </form>
+                            </div>
                         </div>
                     }
                 }
