--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -48,7 +48,7 @@
                                 foreach (var item in post.Comments)
                                 {
                                     <div class="posted-comments comment-box" style="padding: 7.5px">
-                                        <p>@item.UserName - @item.Date.ToLocalTime()</p>
+                                        <p>@item.UserName - @item.Date.ToString("MM/dd/yyyy hh:mm tt")
                                         <p>@item.Content</p>
                                     </div>
                                 }
